* 解决 销量分析页：各平均值按钮线条显示异常

--- a/core/app/views/Analyzes/index_v3.html
+++ b/core/app/views/Analyzes/index_v3.html
@@ -80,7 +80,7 @@
           #{option ''}Account#{/option}
       #{/select}
 
-      #{select 'p.market', items: models.market.M.values(), value: p.market, class: 'form-control selectize',style:"width:120px;"}
+      #{select 'p.market', items: models.market.M.values(), value: p.market, class: 'form-control',style:"width:120px;"}
           #{option ''}Market#{/option}
       #{/select}
 
