*  销量分析页 market select 样式优化

--- a/core/app/views/Analyzes/index_v3.html
+++ b/core/app/views/Analyzes/index_v3.html
@@ -80,9 +80,14 @@
           #{option ''}Account#{/option}
       #{/select}
 
-      #{select 'p.market', items: models.market.M.values(), value: p.market, class: 'form-control',style:"width:120px;"}
-          #{option ''}Market#{/option}
-      #{/select}
+
+
+        <select name="p.market" style="width: 120px;" class="form-control">
+          <option value="">Market</option>
+        #{list items:models.market.M.values(), as:'d'}
+          <option value="${d.toString()}">${d.toString()}</option>
+        #{/list}
+        </select>
 
       #{select 'p.categoryId', items:categoryIds, value: p.categoryId, class: 'form-control selectize',style:"width:100px;"}
           #{option ''}Category#{/option}
