--- a/core/app/views/MaterialPurchases/show.html
+++ b/core/app/views/MaterialPurchases/show.html
@@ -104,7 +104,8 @@
   <input type="hidden" name="expressid" id="expressid" value="${expressid}">
   <div class="row-fluid">
     <div class="span12" id="unit_list">
-    #{render 'MaterialPurchases/_unit_list.html', units:dmt.units, checkbox:true, key:'delivery', delivery:true/}
+    #{render 'MaterialPurchases/_unit_list.html',cooperId:dmt.cooperator?.id,
+                units:dmt.units, checkbox:true,key:'delivery', delivery:true/}
     </div>
   </div>
 </form>
