--- a/core/app/views/MaterialPlans/indexMaterial.html
+++ b/core/app/views/MaterialPlans/indexMaterial.html
@@ -63,7 +63,7 @@
               <table class="table table-condensed table-bordered" id="data-table">
                 <tr>
                   <th width="20px;">
-                    <input type="checkbox" id="checkbox_all" class="checkall" value="">
+                    <input type="checkbox" id="checkbox_all" class="checkall" >
                   </th>
                   <th>物料编码</th>
                   <th>B0M—ID</th>
@@ -79,7 +79,7 @@
                   <td>
                       #{if m.qty > 0}
                         <input type="checkbox" name="pids" value="${m.id}" class="${tr_key}" id="checkbox_${m.id}"
-                               cooperName="${m.cooperName}">
+                               cooperName="${m.cooperName}" cooperId="${m.cooperId}">
                       #{/if}
                   </td>
                   <td>${m.code}</td>
@@ -97,8 +97,7 @@
               </table>
             </div>
           </div>
-
-          <input type="hidden" id="name_form" name="planName">
+          <input type="hidden" id="cooperId" name="cooperId">
         </form>
       </div>
     </div>
