*  修改支付单 物料采购单计划价格显示

--- a/core/app/views/Payments/_materialApply.html
+++ b/core/app/views/Payments/_materialApply.html
@@ -93,7 +93,7 @@
                 <td style="color:${punit.materialPurchase.financeState?.rgb()}">${punit.materialPurchase.financeState?.label()}</td>
                 <td>#{time_tooltip time:punit.materialPurchase.orderTime/}</td>
                 <td>${punit.material.code}</td>
-                <td>${payment.currency.symbol()} ${punit.getPrice()}</td>
+                <td>${payment.currency.symbol()} ${punit.planPrice}</td>
                 <td class="qty">
                 ${punit.planQty}
                 </td>
