--- a/core/app/views/ProcureUnits/edit.html
+++ b/core/app/views/ProcureUnits/edit.html
@@ -1,24 +1,21 @@
-#{extends 'main.html' /}
+#{extends 'main_full_v3.html' /}
 #{set title:'ProcureUnit #' + unit.id + ' Edit' /}
 #{set 'moreScripts'}
     #{script 'procureunits/blank.es6'/}
 #{/set}
-<style>
-  .table td, .table th{
-    vertical-align:middle;
-  }
-</style>
 
 #{errorMsgs /}
-#{warning_row ''}
-<h4>采购计划在不同状态修改会有限制</h4>
-<ol>
-  <li>如果该采购计划为父采购计划，则不能修改数量</li>
-  <li>计划中: 仓库, 合作伙伴, 价格, 数量, 运输类型, 预计到库时间, 预计交货时间, 预计运输时间, 运输单</li>
-  <li>采购中: 仓库, 价格, 数量, 运输类型, 预计到库时间, 预计交货时间, 预计运输时间, 运输单</li>
-  <li>完成交货: 预计到库时间, 预计运输时间, 运输单</li>
-</ol>
-#{/warning_row}
+
+<div class="alert alert-warning alert-dismissible">
+  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+  <h4><i class="icon fa fa-warning">采购计划在不同状态修改会有限制</i></h4>
+  <ol>
+    <li>如果该采购计划为父采购计划，则不能修改数量</li>
+    <li>计划中: 仓库, 合作伙伴, 价格, 数量, 运输类型, 预计到库时间, 预计交货时间, 预计运输时间, 运输单</li>
+    <li>采购中: 仓库, 价格, 数量, 运输类型, 预计到库时间, 预计交货时间, 预计运输时间, 运输单</li>
+    <li>完成交货: 预计到库时间, 预计运输时间, 运输单</li>
+  </ol>
+</div>
 
 #{if unit.isShipmentPlan()}
     #{error_row }
@@ -26,19 +23,25 @@
     #{/error_row}
 #{/if}
 
-<div class="row-fluid">
-  <form action="@{ProcureUnits.update(unit.id)}" method="post" data-method='PUT' id="unitEditForm">
-    <table class="table table-bordered">
-    #{render 'ProcureUnits/_unit_table_trs.html', unit:unit, whouses:whouses, currWhouses:currWhouses, brandName: brandName/}
-      <tr>
-        <td colspan="6">
-        #{render 'ProcureUnits/_shipments.html'/}
-        </td>
-      </tr>
-      <tr>
-        <td colspan="6">
+<div class="row">
+  <div class="col-md-12">
+    <div class="box box-primary">
+      <div class="box-header with-border"><h3 class="box-title">修改采购计划</h3></div>
+      <form action="@{ProcureUnits.update(unit.id)}" method="post" data-method='PUT' id="unitEditForm" class="form-horizontal">
+        <div class="box-body">
+        #{render 'ProcureUnits/_unit_table_trs.html', unit:unit, whouses:whouses, currWhouses:currWhouses, brandName: brandName/}
+          <div class="form-group">
+            <label class="col-sm-1 control-label">选择运输单(Option)</label>
+            <div class="col-sm-11">
+            #{if unit.selling}
+              #{render 'ProcureUnits/_shipments.html'/}
+            #{/if}
+            </div>
+          </div>
+        </div>
+        <div class="box-footer form-inline">
           <input type="hidden" id="oldPlanQty" name="oldPlanQty" value="${oldPlanQty}">
-          <select name="msg" class="inline">
+          <select name="msg" class="form-control">
             <option value="">变更原因</option>
             <option value="供应商原因">供应商原因</option>
             <option value="我司原因">我司原因</option>
@@ -46,20 +49,20 @@
           <button type="submit" class="btn btn-primary" rel="popover" content="当[采购计划的FBA]已生成后再修改[运输方式]或[采购数量]时必须填写原因" placement="right" data-loading>
             更新
           </button>
-        </td>
-      </tr>
-    </table>
-  </form>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
 <input type="hidden" id="unitId" value="${unit.id}">
-#{records records:logs/}
 
+#{records_v3 records:logs/}
 
 <script>
-  var priceFlag  =  $("#priceFlag").val();
-  if (priceFlag == 1){
-    $("input[name='unit.attrs.price']").attr({'readOnly':false});
-  }else{
-    $("input[name='unit.attrs.price']").attr({'readOnly':true});
+  var priceFlag = $("#priceFlag").val();
+  if (priceFlag == 1) {
+    $("input[name='unit.attrs.price']").attr({'readOnly': false});
+  } else {
+    $("input[name='unit.attrs.price']").attr({'readOnly': true});
   }
 </script>
