--- a/core/app/views/ProcureUnits/_unit_list_v3.html
+++ b/core/app/views/ProcureUnits/_unit_list_v3.html
@@ -169,9 +169,7 @@
           </a>
         #{/elseif}
     </td>
-    <td style="color:${unit.shipType.rgb()}">${unit.shipType?.label()}<br>
-      <span style="color:red">${unit.isDedicated?'(专线)':''}</span>
-    </td>
+    <td style="color:${unit.shipType.rgb()}"><i class="${unit.shipType?.pic()}"></i><br>${unit.shipType?.label()}</td>
     <td>#{time_tooltip_v3 time:unit.attrs.planDeliveryDate/}</td>
     <td>#{time_tooltip_v3 time:unit.attrs.planShipDate/}</td>
     <td>#{time_tooltip_v3 time:unit.attrs.deliveryDate/}</td>
