--- a/core/app/views/Payments/_procreApply.html
+++ b/core/app/views/Payments/_procreApply.html
@@ -56,7 +56,7 @@
             <td>${fee.payee.username}</td>
             <td>${punit.result?.label()}</td>
             <td>
-              <span class="label ${fee.stateLabel()}">${fee.state.label()}</span>
+              <span class="label ${fee.stateLabelV3()}">${fee.state.label()}</span>
                 #{power.ck 'paymentunits.deny'}
                     #{if fee.state in [models.finance.PaymentUnit.S.APPLY, models.finance.PaymentUnit.S.APPROVAL]}
                       <button data-url='@{PaymentUnits.deny(fee.id)}' class="btn btn-danger btn-xs paymentUnitDeny">
