--- a/core/app/views/ProcureUnits/index_v3.html
+++ b/core/app/views/ProcureUnits/index_v3.html
@@ -96,6 +96,11 @@
             #{/list}
             </select>
 
+            <select name="p.shield" class="form-control">
+              <option value="1" ${p.shield ? 'selected' : ''}>屏蔽无效计划</option>
+              <option value="0" ${!p.shield ? 'selected' : ''}>不屏蔽无效计划</option>
+            </select>
+
             <div class="input-group">
               <div class="input-group-addon"><i class="icon-search"></i></div>
               <input style="width:200px;" class="form-control" name="p.search" placeholder="sellingId or SKU" value="${p.search}">
