--- a/core/app/views/FBAs/shipmentDetail.html
+++ b/core/app/views/FBAs/shipmentDetail.html
@@ -57,7 +57,8 @@
             <span style="font-size:3pt">长×宽×高</span>
           </td>
           <td style="border:1px solid #000000; padding-left:6px;">
-          #{if procureUnit.fba!=null && procureUnit.fba.fbaCartonContents!=null}
+          #{if procureUnit.fba!=null && procureUnit.fba.fbaCartonContents!=null
+               && procureUnit.fba.dto!=null && procureUnit.fba.dto?.length > 0}
             <span style="font-size:5pt">${procureUnit.fba.dto?.length} x  ${procureUnit.fba.dto?.width}
               x ${procureUnit.fba.dto?.height}</span> ${procureUnit.selling?.market.name()=='AMAZON_US'?'in.':'CM'}
           #{/if}
