--- a/core/app/views/ProcureUnits/_unit_table_trs.html
+++ b/core/app/views/ProcureUnits/_unit_table_trs.html
@@ -59,7 +59,8 @@
       <option #{if unit.containTax} selected #{/if} value="true">是</option>
       <option #{if !unit.containTax} selected #{/if} value="false">否</option>
     </select>
-    <span id="taxSpan">#{if unit.taxPoint>0}税点：${unit.taxPoint} #{/if}</span>
+    <span id="taxSpan">#{if unit.containTax}税点：${unit.taxPoint} #{/if}</span>
+    <input type="hidden" id="taxPointInput" name="unit.taxPoint" value="${unit.taxPoint}">
   </div>
 </div>
 #{if unit.parent}
