--- a/core/app/views/ProcureUnits/indexWhouse.html
+++ b/core/app/views/ProcureUnits/indexWhouse.html
@@ -24,13 +24,7 @@
       <div class="box-header with-border">
         <form action="@{ProcureUnits.indexWhouse()}" method="get" class="form-inline" id="search_Form">
           <div class="row-fluid">
-            <button class="btn btn-primary" id="today"><i class="icon-search"></i> Today</button>
-
-            <div class="form-group">
-              <button class="btn btn-warning" name="splitBtn" data-loading>库存分拆</button>
-              <input type="hidden" name="p.type" value="${p.type}" id="type">
-            </div>
-
+            
             <div class="form-group">
               <div class="input-group">
                 <div class="input-group-addon">From:</div>
@@ -45,7 +39,7 @@
               </div>
             </div>
 
-            <select name="p.dateType" class="form-control">
+            <select name="p.dateType" class="form-control" style="width:100px;">
             #{list items:models.view.post.ProcurePost.DATE_TYPES, as:'t'}
               <option ${t._1 == p.dateType ? 'selected' : ''} value="${t._1}">${t._2}</option>
             #{/list}
@@ -102,7 +96,7 @@
             #{/list}
             </select>
             
-            <select name="p.shield" class="form-control">
+            <select name="p.shield" class="form-control" style="width:110px;">
               <option value="1" ${p.shield ? 'selected' : ''}>屏蔽无效计划</option>
               <option value="0" ${!p.shield ? 'selected' : ''}>不屏蔽无效计划</option>
             </select>
@@ -117,6 +111,11 @@
           </div>
 
           <div class="row-fluid">
+            <button class="btn btn-primary" id="today"><i class="icon-search"></i> Today</button>
+            <div class="form-group">
+              <button class="btn btn-warning" name="splitBtn" data-loading>库存分拆</button>
+              <input type="hidden" name="p.type" value="${p.type}" id="type">
+            </div>
             <div class="input-prepend input-append inline">
               <a href="javascript:void(0)" data-url="@{Inbounds.blank()}" class="btn btn-primary"
                  id="createInboundBtn"><i class="icon-shopping-cart"> </i>采购收货入库单</a>
