--- a/core/app/views/ProcureUnits/index_v3.html
+++ b/core/app/views/ProcureUnits/index_v3.html
@@ -39,7 +39,7 @@
               </div>
             </div>
 
-            <select name="p.dateType" class="form-control">
+            <select name="p.dateType" class="form-control" style="width:100px;">
             #{list items:models.view.post.ProcurePost.DATE_TYPES, as:'t'}
               <option ${t._1 == p.dateType ? 'selected' : ''} value="${t._1}">${t._2}</option>
             #{/list}
@@ -80,7 +80,7 @@
             #{/list}
             </select>
 
-            <select name="p.cooperatorId" class="form-control selectize" style="width:150px;">
+            <select name="p.cooperatorId" class="form-control selectize" style="width:100px;">
               <option value="">供应商</option>
             #{list items:cooperators, as:'cop'}
               <option ${cop.id == p.cooperatorId ? 'selected' : ''} value="${cop.id}">${cop.name}</option>
@@ -96,7 +96,7 @@
             #{/list}
             </select>
 
-            <select name="p.shield" class="form-control">
+            <select name="p.shield" class="form-control" style="width:100px;">
               <option value="1" ${p.shield ? 'selected' : ''}>屏蔽无效计划</option>
               <option value="0" ${!p.shield ? 'selected' : ''}>不屏蔽无效计划</option>
             </select>
