--- a/core/app/views/MaterialPlans/indexMaterial.html
+++ b/core/app/views/MaterialPlans/indexMaterial.html
@@ -71,6 +71,7 @@
                   <th>物料类别</th>
                   <th>采购余量</th>
                   <th>采购未确认数量</th>
+                  <th>出货未确认数量</th>
                   <th>物料供应商</th>
                   <th>项目名称</th>
                 </tr>
@@ -90,6 +91,7 @@
                     <a href="javascript:void(0)" target="_blank" rel="tooltip" title="出货可用数">${m.qty}</a>
                   </td>
                   <td>${m.pendingQty}</td>
+                  <td>${m.planCreateQty}</td>
                   <td>${m.cooperName}</td>
                   <td>${m.projectName}</td>
                 </tr>
